--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>React Base Project</title>
-    <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="build.css">
+    <script src="build.js"></script>
 </head>
 <body>
-    <h1>React Base Project</h1>
     <div id="app"></div>
-    <script src="main.js"></script>
 </body>
 </html>
